test/libsolidity/syntaxTests/inlineAssembly/invalid/storage_variable_access_out_of_functions.sol
contract test {
    uint a;
    function f() pure public {
        assembly {
            function g() -> x { x := a_slot }
        }
    }
}
